--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <title></title>
     </head>
     <body>
+        <CENTER> <FONT FACE="TIMES NEW ROMAN" SIZE= "10CM"> RAMSADAY COLLEGE <BR> CAMPUS WEBMAP </FONT> </CENTER>
         <div id="map">
             <div id="popup" class="ol-popup">
                 <a href="#" id="popup-closer" class="ol-popup-closer"></a>
@@ -114,5 +115,6 @@
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
+            DEVELOPED BY DEPARTMENT OF GEOGRAPHY, 2023
     </body>
 </html>
